// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component renders correctly 1`] = `
<button
  className="button"
  onClick={[Function]}
>
  ⏎
</button>
`;

exports[`Button component renders correctly 2`] = `
<button
  className="button"
>
  Push me!
</button>
`;
